--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-09 11:12 -->
+<!-- 2022-12-10 02:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org706c937">1. 暑假</a>
+<li><a href="#org265c2a9">1. 暑假</a>
 <ul>
-<li><a href="#orgb2bc68c">1.1. 夏令营</a></li>
+<li><a href="#org5c2e56a">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgc0d7ffb">2. 打工</a></li>
-<li><a href="#org5b304e8">3. 我的928</a>
+<li><a href="#org3eda0be">2. 打工</a></li>
+<li><a href="#org59406f4">3. 我的928</a>
 <ul>
-<li><a href="#org0e21f49">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgb8f8709">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org2214ba9">4. 他们的928</a></li>
-<li><a href="#orgf666fb5">5. 总结</a></li>
+<li><a href="#orgf51b6bc">4. 他们的928</a></li>
+<li><a href="#org52640d2">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orga531ed6">
+<figure id="orgff6997e">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org706c937" class="outline-2">
-<h2 id="org706c937"><span class="section-number-2">1.</span> <a href="#org706c937">暑假</a></h2>
+<div id="outline-container-org265c2a9" class="outline-2">
+<h2 id="org265c2a9"><span class="section-number-2">1.</span> <a href="#org265c2a9">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgb2bc68c" class="outline-3">
-<h3 id="orgb2bc68c"><span class="section-number-3">1.1.</span> <a href="#orgb2bc68c">夏令营</a></h3>
+<div id="outline-container-org5c2e56a" class="outline-3">
+<h3 id="org5c2e56a"><span class="section-number-3">1.1.</span> <a href="#org5c2e56a">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgc0d7ffb" class="outline-2">
-<h2 id="orgc0d7ffb"><span class="section-number-2">2.</span> <a href="#orgc0d7ffb">打工</a></h2>
+<div id="outline-container-org3eda0be" class="outline-2">
+<h2 id="org3eda0be"><span class="section-number-2">2.</span> <a href="#org3eda0be">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org5b304e8" class="outline-2">
-<h2 id="org5b304e8"><span class="section-number-2">3.</span> <a href="#org5b304e8">我的928</a></h2>
+<div id="outline-container-org59406f4" class="outline-2">
+<h2 id="org59406f4"><span class="section-number-2">3.</span> <a href="#org59406f4">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org0e21f49" class="outline-3">
-<h3 id="org0e21f49"><span class="section-number-3">3.1.</span> <a href="#org0e21f49">928演唱会(bushi</a></h3>
+<div id="outline-container-orgb8f8709" class="outline-3">
+<h3 id="orgb8f8709"><span class="section-number-3">3.1.</span> <a href="#orgb8f8709">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org56bbee8">
+<figure id="org0027807">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org5488fb0">
+<figure id="orgff80618">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org2214ba9" class="outline-2">
-<h2 id="org2214ba9"><span class="section-number-2">4.</span> <a href="#org2214ba9">他们的928</a></h2>
+<div id="outline-container-orgf51b6bc" class="outline-2">
+<h2 id="orgf51b6bc"><span class="section-number-2">4.</span> <a href="#orgf51b6bc">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgf666fb5" class="outline-2">
-<h2 id="orgf666fb5"><span class="section-number-2">5.</span> <a href="#orgf666fb5">总结</a></h2>
+<div id="outline-container-org52640d2" class="outline-2">
+<h2 id="org52640d2"><span class="section-number-2">5.</span> <a href="#org52640d2">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-09 11:12</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-10 02:43</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/daily/2022-09-28.org">2022-09-28.org</a></td></tr>
 </table>
