--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-09 11:12 -->
+<!-- 2022-12-10 02:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -46,17 +46,17 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org906402e">1. 一大早</a></li>
-<li><a href="#orga9b5a1a">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#orgfa0a68a">3. 科研训练</a></li>
-<li><a href="#orgfd8256a">4. 520</a></li>
+<li><a href="#orgf9f9ec6">1. 一大早</a></li>
+<li><a href="#orga65237f">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#org2871658">3. 科研训练</a></li>
+<li><a href="#org6712b23">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org906402e" class="outline-2">
-<h2 id="org906402e"><span class="section-number-2">1.</span> <a href="#org906402e">一大早</a></h2>
+<div id="outline-container-orgf9f9ec6" class="outline-2">
+<h2 id="orgf9f9ec6"><span class="section-number-2">1.</span> <a href="#orgf9f9ec6">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -65,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga9b5a1a" class="outline-2">
-<h2 id="orga9b5a1a"><span class="section-number-2">2.</span> <a href="#orga9b5a1a">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-orga65237f" class="outline-2">
+<h2 id="orga65237f"><span class="section-number-2">2.</span> <a href="#orga65237f">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -92,8 +92,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgfa0a68a" class="outline-2">
-<h2 id="orgfa0a68a"><span class="section-number-2">3.</span> <a href="#orgfa0a68a">科研训练</a></h2>
+<div id="outline-container-org2871658" class="outline-2">
+<h2 id="org2871658"><span class="section-number-2">3.</span> <a href="#org2871658">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -101,8 +101,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgfd8256a" class="outline-2">
-<h2 id="orgfd8256a"><span class="section-number-2">4.</span> <a href="#orgfd8256a">520</a></h2>
+<div id="outline-container-org6712b23" class="outline-2">
+<h2 id="org6712b23"><span class="section-number-2">4.</span> <a href="#org6712b23">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -116,7 +116,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-09 11:12</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-10 02:43</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/daily/2021-05-19.org">2021-05-19.org</a></td></tr>
 </table>
