--- a/content/emacs/org-hyperlink.html
+++ b/content/emacs/org-hyperlink.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-09 11:12 -->
+<!-- 2022-12-10 02:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org-mode Hyperlinks</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb54ba32">1. URLs</a>
+<li><a href="#orga80cec0">1. URLs</a>
 <ul>
-<li><a href="#orgb6165a9">1.1. Info</a></li>
+<li><a href="#orga9f2cc3">1.1. Info</a></li>
 </ul>
 </li>
 <li><a href="#hlinks">2. Headings</a></li>
-<li><a href="#orgde8083c">3. Files</a></li>
-<li><a href="#orgda41283">4. Named Elements</a></li>
-<li><a href="#org7c5b87e">5. Dedicated Targets</a></li>
-<li><a href="#orgef65a97">6. Radio Targets</a></li>
+<li><a href="#orgbe79309">3. Files</a></li>
+<li><a href="#org2f45e88">4. Named Elements</a></li>
+<li><a href="#org9c3ed72">5. Dedicated Targets</a></li>
+<li><a href="#org3f132a7">6. Radio Targets</a></li>
 <li><a href="#example-section">7. Something to Refer to</a>
 <ul>
-<li><a href="#orgc21a2b3">7.1. A sub-section</a></li>
+<li><a href="#orga4537e8">7.1. A sub-section</a></li>
 </ul>
 </li>
 </ul>
@@ -66,12 +66,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgb54ba32" class="outline-2">
-<h2 id="orgb54ba32"><span class="section-number-2">1.</span> <a href="#orgb54ba32">URLs</a></h2>
+<div id="outline-container-orga80cec0" class="outline-2">
+<h2 id="orga80cec0"><span class="section-number-2">1.</span> <a href="#orga80cec0">URLs</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgb6165a9" class="outline-3">
-<h3 id="orgb6165a9"><span class="section-number-3">1.1.</span> <a href="#orgb6165a9">Info</a></h3>
+<div id="outline-container-orga9f2cc3" class="outline-3">
+<h3 id="orga9f2cc3"><span class="section-number-3">1.1.</span> <a href="#orga9f2cc3">Info</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Use the <code>info</code> link type to link to an Info manual or a specific node. <br>
@@ -113,8 +113,8 @@ Use <code>[[* Headings]]</code> to directly refer to the name of a heading.  Not
 that there's only one asterisk (<code>*</code>), no matter how deep the heading is.
 </p>
 <p class="verse">
-<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#orgda41283">4</a>;<br>
-<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#orgc21a2b3">sub-section</a>.<br>
+<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#org2f45e88">4</a>;<br>
+<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#orga4537e8">sub-section</a>.<br>
 </p>
 
 <p>
@@ -123,8 +123,8 @@ Use <code>C-c C-o</code> to nevigate to the target, and <code>C-c &amp;</code> t
 </div>
 </div>
 
-<div id="outline-container-orgde8083c" class="outline-2">
-<h2 id="orgde8083c"><span class="section-number-2">3.</span> <a href="#orgde8083c">Files</a></h2>
+<div id="outline-container-orgbe79309" class="outline-2">
+<h2 id="orgbe79309"><span class="section-number-2">3.</span> <a href="#orgbe79309">Files</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 You can go to a specific line in a file with by appending <code>::N</code> at the
@@ -134,8 +134,8 @@ can't be exported to HTML.
 </div>
 </div>
 
-<div id="outline-container-orgda41283" class="outline-2">
-<h2 id="orgda41283"><span class="section-number-2">4.</span> <a href="#orgda41283">Named Elements</a></h2>
+<div id="outline-container-org2f45e88" class="outline-2">
+<h2 id="org2f45e88"><span class="section-number-2">4.</span> <a href="#org2f45e88">Named Elements</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Elements can be given a name:
@@ -163,7 +163,7 @@ Three main elements that can be named:
 
 <p>
 You can refer to named elements using <code>[[named source block]]</code>, e.g.
-Fig. <a href="#orgb9f2724">1</a>, Listing <a href="#org93be9f0">1</a>, and Table <a href="#org79da61f">1</a>.
+Fig. <a href="#org6384ca3">1</a>, Listing <a href="#orgcfeeba5">1</a>, and Table <a href="#org94fc4c6">1</a>.
 </p>
 
 <p>
@@ -180,24 +180,24 @@ order to get proper numbering.
 </div>
 </div>
 
-<div id="outline-container-org7c5b87e" class="outline-2">
-<h2 id="org7c5b87e"><span class="section-number-2">5.</span> <a href="#org7c5b87e">Dedicated Targets</a></h2>
+<div id="outline-container-org9c3ed72" class="outline-2">
+<h2 id="org9c3ed72"><span class="section-number-2">5.</span> <a href="#org9c3ed72">Dedicated Targets</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Dedicated targets can be used to refer to a paragraph or an item in a
 list.
 </p>
 <ul class="org-ul">
-<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#orgd292fc1">prefixed sentence</a></li>
+<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org1bed3e0">prefixed sentence</a></li>
 <li>unordered list:  <code>the [[unordered target]]^th in the list</code> &rarr;
-the <a href="#org1840f3e">3</a><sup>th</sup> in the list</li>
-<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#orgb84190a">lalala</a></li>
+the <a href="#orgfdf80a8">3</a><sup>th</sup> in the list</li>
+<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#org24b7d7f">lalala</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgef65a97" class="outline-2">
-<h2 id="orgef65a97"><span class="section-number-2">6.</span> <a href="#orgef65a97">Radio Targets</a></h2>
+<div id="outline-container-org3f132a7" class="outline-2">
+<h2 id="org3f132a7"><span class="section-number-2">6.</span> <a href="#org3f132a7">Radio Targets</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 A radio target radiates its position.  It is enclosed in three angular
@@ -207,14 +207,14 @@ brackets, e.g. <code>&lt;&lt;&lt;thebesttv&gt;&gt;&gt;</code> and <code>&lt;&lt;
 
 <p>
 When a radio target is defined, any occurence of that word (or the
-words) in the document, e.g. <a href="#orgd2cf58b">thebesttv</a>, is automatically linked to the
+words) in the document, e.g. <a href="#org6299f2a">thebesttv</a>, is automatically linked to the
 originating target.  This can be used for linking all the occurences of
-a terminology with its definition.  See the song of "<a href="#org4f4da0c">do re me</a>".
+a terminology with its definition.  See the song of "<a href="#org2ee4d99">do re me</a>".
 </p>
 
 <p>
 See the manual: <a href="https://orgmode.org/manual/Radio-Targets.html">4.3 Radio Targets</a>.
-Again, <a href="#orgd2cf58b">thebesttv</a> and <a href="#org4f4da0c">do re me</a>.
+Again, <a href="#org6299f2a">thebesttv</a> and <a href="#org2ee4d99">do re me</a>.
 </p>
 </div>
 </div>
@@ -243,29 +243,29 @@ This word---&#8203;<span style="text-decoration: underline;">&lt;&lt;&lt;thebest
 </div>
 
 <p>
-<a id="orgd292fc1"></a> This is a sentence prefixed with a <i>dedicated target</i>.
+<a id="org1bed3e0"></a> This is a sentence prefixed with a <i>dedicated target</i>.
 </p>
 
 <ul class="org-ul">
 <li>unordered list</li>
 <li>some item</li>
-<li><a id="org1840f3e"></a> target in an unordered list</li>
+<li><a id="orgfdf80a8"></a> target in an unordered list</li>
 </ul>
 
 
 <ol class="org-ol">
 <li>ordered list</li>
-<li><a id="orgb84190a"></a> target in an ordered list</li>
+<li><a id="org24b7d7f"></a> target in an ordered list</li>
 </ol>
 
 <p>
-This word&#x2014;<a id="orgd2cf58b">thebesttv</a>&#x2014;is a radio target.
-<a id="org4f4da0c">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
+This word&#x2014;<a id="org6299f2a">thebesttv</a>&#x2014;is a radio target.
+<a id="org2ee4d99">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
 </p>
 </div>
 
-<div id="outline-container-orgc21a2b3" class="outline-3">
-<h3 id="orgc21a2b3"><span class="section-number-3">7.1.</span> <a href="#orgc21a2b3">A sub-section</a></h3>
+<div id="outline-container-orga4537e8" class="outline-3">
+<h3 id="orga4537e8"><span class="section-number-3">7.1.</span> <a href="#orga4537e8">A sub-section</a></h3>
 <div class="outline-text-3" id="text-7-1">
 <div class="org-src-container">
 <pre class="src src-org"><span style="text-decoration: underline;">{{{image(50)}}}</span>
@@ -290,20 +290,20 @@ This word&#x2014;<a id="orgd2cf58b">thebesttv</a>&#x2014;is a radio target.
 </div>
 
 
-<figure id="orgb9f2724">
+<figure id="org6384ca3">
 <img src="../daily/2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="50%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>sample image</figcaption>
 </figure>
 
 <div class="org-src-container">
-<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="org93be9f0">(<span style="font-weight: bold;">let</span> ((x 2))
+<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="orgcfeeba5">(<span style="font-weight: bold;">let</span> ((x 2))
   (coderef)
   (1+ x))
 </pre>
 </div>
 
-<table id="org79da61f">
+<table id="org94fc4c6">
 <caption class="t-above"><span class="table-number">&#34920;1&nbsp;</span> sample table</caption>
 
 <colgroup>
@@ -338,10 +338,10 @@ This word&#x2014;<a id="orgd2cf58b">thebesttv</a>&#x2014;is a radio target.
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
-  <tr><td class="org-right">Author</td><td class="org-left"><a href="#orgd2cf58b">thebesttv</a></td></tr>
+  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org6299f2a">thebesttv</a></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-22 20:15</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-04 18:20</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-09 11:12</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-10 02:43</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/emacs/org-hyperlink.org">org-hyperlink.org</a></td></tr>
 </table>
