Update from https://github.com/thebesttv/eserver-static/commit/8570a60e420d5646a454b49bfa2798472aa41cd2

--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-11 02:42 -->
+<!-- 2022-12-12 02:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb33efcf">1. 暑假</a>
+<li><a href="#org1b53486">1. 暑假</a>
 <ul>
-<li><a href="#org28f9c8d">1.1. 夏令营</a></li>
+<li><a href="#org918ac51">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgf8556a5">2. 打工</a></li>
-<li><a href="#org1fe838d">3. 我的928</a>
+<li><a href="#orgadbe3cb">2. 打工</a></li>
+<li><a href="#orgad46f19">3. 我的928</a>
 <ul>
-<li><a href="#org6f8f632">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org497ee66">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orgb3934c8">4. 他们的928</a></li>
-<li><a href="#org77372d1">5. 总结</a></li>
+<li><a href="#org5b73ec7">4. 他们的928</a></li>
+<li><a href="#org4415149">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org5d180aa">
+<figure id="orgc26c434">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgb33efcf" class="outline-2">
-<h2 id="orgb33efcf"><span class="section-number-2">1.</span> <a href="#orgb33efcf">暑假</a></h2>
+<div id="outline-container-org1b53486" class="outline-2">
+<h2 id="org1b53486"><span class="section-number-2">1.</span> <a href="#org1b53486">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org28f9c8d" class="outline-3">
-<h3 id="org28f9c8d"><span class="section-number-3">1.1.</span> <a href="#org28f9c8d">夏令营</a></h3>
+<div id="outline-container-org918ac51" class="outline-3">
+<h3 id="org918ac51"><span class="section-number-3">1.1.</span> <a href="#org918ac51">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgf8556a5" class="outline-2">
-<h2 id="orgf8556a5"><span class="section-number-2">2.</span> <a href="#orgf8556a5">打工</a></h2>
+<div id="outline-container-orgadbe3cb" class="outline-2">
+<h2 id="orgadbe3cb"><span class="section-number-2">2.</span> <a href="#orgadbe3cb">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org1fe838d" class="outline-2">
-<h2 id="org1fe838d"><span class="section-number-2">3.</span> <a href="#org1fe838d">我的928</a></h2>
+<div id="outline-container-orgad46f19" class="outline-2">
+<h2 id="orgad46f19"><span class="section-number-2">3.</span> <a href="#orgad46f19">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org6f8f632" class="outline-3">
-<h3 id="org6f8f632"><span class="section-number-3">3.1.</span> <a href="#org6f8f632">928演唱会(bushi</a></h3>
+<div id="outline-container-org497ee66" class="outline-3">
+<h3 id="org497ee66"><span class="section-number-3">3.1.</span> <a href="#org497ee66">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org70c1c09">
+<figure id="orgd99e94b">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgc0a9928">
+<figure id="org9e4721f">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgb3934c8" class="outline-2">
-<h2 id="orgb3934c8"><span class="section-number-2">4.</span> <a href="#orgb3934c8">他们的928</a></h2>
+<div id="outline-container-org5b73ec7" class="outline-2">
+<h2 id="org5b73ec7"><span class="section-number-2">4.</span> <a href="#org5b73ec7">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org77372d1" class="outline-2">
-<h2 id="org77372d1"><span class="section-number-2">5.</span> <a href="#org77372d1">总结</a></h2>
+<div id="outline-container-org4415149" class="outline-2">
+<h2 id="org4415149"><span class="section-number-2">5.</span> <a href="#org4415149">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-11 02:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-12 02:42</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/daily/2022-09-28.org">2022-09-28.org</a></td></tr>
 </table>
