--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-11 02:42 -->
+<!-- 2022-12-12 02:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgafb7748">1. 笔记</a></li>
-<li><a href="#org568bd6a">2. 推送</a></li>
-<li><a href="#orgfbd561d">3. Git</a></li>
-<li><a href="#org63ea6aa">4. XBox</a></li>
-<li><a href="#orga95152c">5. Bilibili</a></li>
+<li><a href="#orgf4cf9d6">1. 笔记</a></li>
+<li><a href="#org2b59592">2. 推送</a></li>
+<li><a href="#org20c0e31">3. Git</a></li>
+<li><a href="#org6910cdc">4. XBox</a></li>
+<li><a href="#org1d0f841">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgafb7748" class="outline-2">
-<h2 id="orgafb7748"><span class="section-number-2">1.</span> <a href="#orgafb7748">笔记</a></h2>
+<div id="outline-container-orgf4cf9d6" class="outline-2">
+<h2 id="orgf4cf9d6"><span class="section-number-2">1.</span> <a href="#orgf4cf9d6">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-org568bd6a" class="outline-2">
-<h2 id="org568bd6a"><span class="section-number-2">2.</span> <a href="#org568bd6a">推送</a></h2>
+<div id="outline-container-org2b59592" class="outline-2">
+<h2 id="org2b59592"><span class="section-number-2">2.</span> <a href="#org2b59592">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgfbd561d" class="outline-2">
-<h2 id="orgfbd561d"><span class="section-number-2">3.</span> <a href="#orgfbd561d">Git</a></h2>
+<div id="outline-container-org20c0e31" class="outline-2">
+<h2 id="org20c0e31"><span class="section-number-2">3.</span> <a href="#org20c0e31">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-org63ea6aa" class="outline-2">
-<h2 id="org63ea6aa"><span class="section-number-2">4.</span> <a href="#org63ea6aa">XBox</a></h2>
+<div id="outline-container-org6910cdc" class="outline-2">
+<h2 id="org6910cdc"><span class="section-number-2">4.</span> <a href="#org6910cdc">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器, 见<a href="../pcap2socks.html">使用 pcap2socks 加速 XBox</a>
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga95152c" class="outline-2">
-<h2 id="orga95152c"><span class="section-number-2">5.</span> <a href="#orga95152c">Bilibili</a></h2>
+<div id="outline-container-org1d0f841" class="outline-2">
+<h2 id="org1d0f841"><span class="section-number-2">5.</span> <a href="#org1d0f841">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 21:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-11 02:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-12 02:42</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/tools.org">tools.org</a></td></tr>
 </table>
