--- a/content/emacs/org-hyperlink.html
+++ b/content/emacs/org-hyperlink.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-11 02:42 -->
+<!-- 2022-12-12 02:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org-mode Hyperlinks</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org65add33">1. URLs</a>
+<li><a href="#org02158a2">1. URLs</a>
 <ul>
-<li><a href="#org91ef360">1.1. Info</a></li>
+<li><a href="#org9ffdc23">1.1. Info</a></li>
 </ul>
 </li>
 <li><a href="#hlinks">2. Headings</a></li>
-<li><a href="#org67b3103">3. Files</a></li>
-<li><a href="#org35493fb">4. Named Elements</a></li>
-<li><a href="#org7ae8074">5. Dedicated Targets</a></li>
-<li><a href="#org4b76e65">6. Radio Targets</a></li>
+<li><a href="#org86b38a4">3. Files</a></li>
+<li><a href="#org40eda23">4. Named Elements</a></li>
+<li><a href="#org887502d">5. Dedicated Targets</a></li>
+<li><a href="#orgbe45f62">6. Radio Targets</a></li>
 <li><a href="#example-section">7. Something to Refer to</a>
 <ul>
-<li><a href="#orgc2b00ff">7.1. A sub-section</a></li>
+<li><a href="#orgcb99b4d">7.1. A sub-section</a></li>
 </ul>
 </li>
 </ul>
@@ -66,12 +66,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org65add33" class="outline-2">
-<h2 id="org65add33"><span class="section-number-2">1.</span> <a href="#org65add33">URLs</a></h2>
+<div id="outline-container-org02158a2" class="outline-2">
+<h2 id="org02158a2"><span class="section-number-2">1.</span> <a href="#org02158a2">URLs</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org91ef360" class="outline-3">
-<h3 id="org91ef360"><span class="section-number-3">1.1.</span> <a href="#org91ef360">Info</a></h3>
+<div id="outline-container-org9ffdc23" class="outline-3">
+<h3 id="org9ffdc23"><span class="section-number-3">1.1.</span> <a href="#org9ffdc23">Info</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Use the <code>info</code> link type to link to an Info manual or a specific node. <br>
@@ -113,8 +113,8 @@ Use <code>[[* Headings]]</code> to directly refer to the name of a heading.  Not
 that there's only one asterisk (<code>*</code>), no matter how deep the heading is.
 </p>
 <p class="verse">
-<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#org35493fb">4</a>;<br>
-<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#orgc2b00ff">sub-section</a>.<br>
+<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#org40eda23">4</a>;<br>
+<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#orgcb99b4d">sub-section</a>.<br>
 </p>
 
 <p>
@@ -123,8 +123,8 @@ Use <code>C-c C-o</code> to nevigate to the target, and <code>C-c &amp;</code> t
 </div>
 </div>
 
-<div id="outline-container-org67b3103" class="outline-2">
-<h2 id="org67b3103"><span class="section-number-2">3.</span> <a href="#org67b3103">Files</a></h2>
+<div id="outline-container-org86b38a4" class="outline-2">
+<h2 id="org86b38a4"><span class="section-number-2">3.</span> <a href="#org86b38a4">Files</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 You can go to a specific line in a file with by appending <code>::N</code> at the
@@ -134,8 +134,8 @@ can't be exported to HTML.
 </div>
 </div>
 
-<div id="outline-container-org35493fb" class="outline-2">
-<h2 id="org35493fb"><span class="section-number-2">4.</span> <a href="#org35493fb">Named Elements</a></h2>
+<div id="outline-container-org40eda23" class="outline-2">
+<h2 id="org40eda23"><span class="section-number-2">4.</span> <a href="#org40eda23">Named Elements</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Elements can be given a name:
@@ -163,7 +163,7 @@ Three main elements that can be named:
 
 <p>
 You can refer to named elements using <code>[[named source block]]</code>, e.g.
-Fig. <a href="#orge52fc47">1</a>, Listing <a href="#orgf50aba5">1</a>, and Table <a href="#orgab1e29b">1</a>.
+Fig. <a href="#org95bb1e1">1</a>, Listing <a href="#orgf166c3e">1</a>, and Table <a href="#org4756021">1</a>.
 </p>
 
 <p>
@@ -180,24 +180,24 @@ order to get proper numbering.
 </div>
 </div>
 
-<div id="outline-container-org7ae8074" class="outline-2">
-<h2 id="org7ae8074"><span class="section-number-2">5.</span> <a href="#org7ae8074">Dedicated Targets</a></h2>
+<div id="outline-container-org887502d" class="outline-2">
+<h2 id="org887502d"><span class="section-number-2">5.</span> <a href="#org887502d">Dedicated Targets</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Dedicated targets can be used to refer to a paragraph or an item in a
 list.
 </p>
 <ul class="org-ul">
-<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org68d991a">prefixed sentence</a></li>
+<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org178c725">prefixed sentence</a></li>
 <li>unordered list:  <code>the [[unordered target]]^th in the list</code> &rarr;
-the <a href="#org723c040">3</a><sup>th</sup> in the list</li>
-<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#org8ffbb6a">lalala</a></li>
+the <a href="#org5789cfc">3</a><sup>th</sup> in the list</li>
+<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#orgcfd68a3">lalala</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org4b76e65" class="outline-2">
-<h2 id="org4b76e65"><span class="section-number-2">6.</span> <a href="#org4b76e65">Radio Targets</a></h2>
+<div id="outline-container-orgbe45f62" class="outline-2">
+<h2 id="orgbe45f62"><span class="section-number-2">6.</span> <a href="#orgbe45f62">Radio Targets</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 A radio target radiates its position.  It is enclosed in three angular
@@ -207,14 +207,14 @@ brackets, e.g. <code>&lt;&lt;&lt;thebesttv&gt;&gt;&gt;</code> and <code>&lt;&lt;
 
 <p>
 When a radio target is defined, any occurence of that word (or the
-words) in the document, e.g. <a href="#org8cba372">thebesttv</a>, is automatically linked to the
+words) in the document, e.g. <a href="#orgb945043">thebesttv</a>, is automatically linked to the
 originating target.  This can be used for linking all the occurences of
-a terminology with its definition.  See the song of "<a href="#orgc0bbb56">do re me</a>".
+a terminology with its definition.  See the song of "<a href="#orge09601c">do re me</a>".
 </p>
 
 <p>
 See the manual: <a href="https://orgmode.org/manual/Radio-Targets.html">4.3 Radio Targets</a>.
-Again, <a href="#org8cba372">thebesttv</a> and <a href="#orgc0bbb56">do re me</a>.
+Again, <a href="#orgb945043">thebesttv</a> and <a href="#orge09601c">do re me</a>.
 </p>
 </div>
 </div>
@@ -243,29 +243,29 @@ This word---&#8203;<span style="text-decoration: underline;">&lt;&lt;&lt;thebest
 </div>
 
 <p>
-<a id="org68d991a"></a> This is a sentence prefixed with a <i>dedicated target</i>.
+<a id="org178c725"></a> This is a sentence prefixed with a <i>dedicated target</i>.
 </p>
 
 <ul class="org-ul">
 <li>unordered list</li>
 <li>some item</li>
-<li><a id="org723c040"></a> target in an unordered list</li>
+<li><a id="org5789cfc"></a> target in an unordered list</li>
 </ul>
 
 
 <ol class="org-ol">
 <li>ordered list</li>
-<li><a id="org8ffbb6a"></a> target in an ordered list</li>
+<li><a id="orgcfd68a3"></a> target in an ordered list</li>
 </ol>
 
 <p>
-This word&#x2014;<a id="org8cba372">thebesttv</a>&#x2014;is a radio target.
-<a id="orgc0bbb56">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
+This word&#x2014;<a id="orgb945043">thebesttv</a>&#x2014;is a radio target.
+<a id="orge09601c">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
 </p>
 </div>
 
-<div id="outline-container-orgc2b00ff" class="outline-3">
-<h3 id="orgc2b00ff"><span class="section-number-3">7.1.</span> <a href="#orgc2b00ff">A sub-section</a></h3>
+<div id="outline-container-orgcb99b4d" class="outline-3">
+<h3 id="orgcb99b4d"><span class="section-number-3">7.1.</span> <a href="#orgcb99b4d">A sub-section</a></h3>
 <div class="outline-text-3" id="text-7-1">
 <div class="org-src-container">
 <pre class="src src-org"><span style="text-decoration: underline;">{{{image(50)}}}</span>
@@ -290,20 +290,20 @@ This word&#x2014;<a id="org8cba372">thebesttv</a>&#x2014;is a radio target.
 </div>
 
 
-<figure id="orge52fc47">
+<figure id="org95bb1e1">
 <img src="../daily/2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="50%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>sample image</figcaption>
 </figure>
 
 <div class="org-src-container">
-<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="orgf50aba5">(<span style="font-weight: bold;">let</span> ((x 2))
+<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="orgf166c3e">(<span style="font-weight: bold;">let</span> ((x 2))
   (coderef)
   (1+ x))
 </pre>
 </div>
 
-<table id="orgab1e29b">
+<table id="org4756021">
 <caption class="t-above"><span class="table-number">&#34920;1&nbsp;</span> sample table</caption>
 
 <colgroup>
@@ -338,10 +338,10 @@ This word&#x2014;<a id="org8cba372">thebesttv</a>&#x2014;is a radio target.
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
-  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org8cba372">thebesttv</a></td></tr>
+  <tr><td class="org-right">Author</td><td class="org-left"><a href="#orgb945043">thebesttv</a></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-22 20:15</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-04 18:20</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-11 02:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-12 02:42</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/emacs/org-hyperlink.org">org-hyperlink.org</a></td></tr>
 </table>
