--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-11 02:42 -->
+<!-- 2022-12-12 02:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2a64764">1. What is Vectored IO</a></li>
-<li><a href="#orge69ab34">2. Vectored IO in Linux</a></li>
-<li><a href="#orgf634ed0">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#orgdf56507">4. Examples</a>
+<li><a href="#orgb54f963">1. What is Vectored IO</a></li>
+<li><a href="#org177269c">2. Vectored IO in Linux</a></li>
+<li><a href="#org66c67f8">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org015d30a">4. Examples</a>
 <ul>
-<li><a href="#orge25baf0">4.1. <code>write()</code></a></li>
-<li><a href="#orgd2c7c8d">4.2. <code>writev()</code></a></li>
+<li><a href="#orgc0a6950">4.1. <code>write()</code></a></li>
+<li><a href="#orgbd450c0">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org2a64764" class="outline-2">
-<h2 id="org2a64764"><span class="section-number-2">1.</span> <a href="#org2a64764">What is Vectored IO</a></h2>
+<div id="outline-container-orgb54f963" class="outline-2">
+<h2 id="orgb54f963"><span class="section-number-2">1.</span> <a href="#orgb54f963">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-orge69ab34" class="outline-2">
-<h2 id="orge69ab34"><span class="section-number-2">2.</span> <a href="#orge69ab34">Vectored IO in Linux</a></h2>
+<div id="outline-container-org177269c" class="outline-2">
+<h2 id="org177269c"><span class="section-number-2">2.</span> <a href="#org177269c">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-orgf634ed0" class="outline-2">
-<h2 id="orgf634ed0"><span class="section-number-2">3.</span> <a href="#orgf634ed0">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org66c67f8" class="outline-2">
+<h2 id="org66c67f8"><span class="section-number-2">3.</span> <a href="#org66c67f8">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-orgdf56507" class="outline-2">
-<h2 id="orgdf56507"><span class="section-number-2">4.</span> <a href="#orgdf56507">Examples</a></h2>
+<div id="outline-container-org015d30a" class="outline-2">
+<h2 id="org015d30a"><span class="section-number-2">4.</span> <a href="#org015d30a">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orge25baf0" class="outline-3">
-<h3 id="orge25baf0"><span class="section-number-3">4.1.</span> <a href="#orge25baf0"><code>write()</code></a></h3>
+<div id="outline-container-orgc0a6950" class="outline-3">
+<h3 id="orgc0a6950"><span class="section-number-3">4.1.</span> <a href="#orgc0a6950"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-orgd2c7c8d" class="outline-3">
-<h3 id="orgd2c7c8d"><span class="section-number-3">4.2.</span> <a href="#orgd2c7c8d"><code>writev()</code></a></h3>
+<div id="outline-container-orgbd450c0" class="outline-3">
+<h3 id="orgbd450c0"><span class="section-number-3">4.2.</span> <a href="#orgbd450c0"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-11 02:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-12 02:42</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/linux/vectored-io.org">vectored-io.org</a></td></tr>
 </table>
